--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   material: ^1.0.0+2
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
