--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,20 @@ dependencies:
   material: ^1.0.0+2
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.3.2
+flutter_native_splash:
+  # color: '#0A3161'
+  color: '#000'
+  image: assets/icon.png
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
