--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,9 @@ flutter_native_splash:
   color: '#000'
   image: assets/icon.png
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
   image_path: "assets/icon/icon.png"
+  android: true
+  ios: true
   min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
