--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.13.1
+  # flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.3.2
   flutter_test:
@@ -47,10 +47,11 @@ flutter_native_splash:
   # color: '#0A3161'
   color: '#000'
   image: assets/icon.png
-flutter_launcher_icons:
-  image_path: "assets/icon/icon.png"
-  android: true
-  ios: true
+# flutter_launcher_icons:
+#   image_path: "assets/icon/icon.png"
+#   android: true
+#   ios: true
+#   min_sdk_android: 26
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
