--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
   google_nav_bar: ^5.0.6
+  lottie: ^2.6.0
   material: ^1.0.0+2
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
-  # flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.3.2
   flutter_test:
@@ -52,7 +52,6 @@ flutter_native_splash:
 #   android: true
 #   ios: true
 #   min_sdk_android: 26
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
