--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
   google_nav_bar: ^5.0.6
+  image_picker: ^1.0.2
   lottie: ^2.6.0
   material: ^1.0.0+2
+  path: ^1.8.3
+  path_provider: ^2.1.0
+  shared_preferences: ^2.2.0
   smooth_page_indicator: ^1.1.0
+  string_validator: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
