--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   material: ^1.0.0+2
   path: ^1.8.3
   path_provider: ^2.1.0
+  provider: ^6.0.5
   shared_preferences: ^2.2.0
   smooth_page_indicator: ^1.1.0
   string_validator: ^1.0.0
