--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animations: ^2.0.7
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
-  google_nav_bar: ^5.0.6
   image_picker: ^1.0.2
   lottie: ^2.6.0
   material: ^1.0.0+2
@@ -46,7 +46,6 @@ dependencies:
   string_validator: ^1.0.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   flutter_native_splash: ^2.3.2
   flutter_test:
     sdk: flutter
