--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   animations: ^2.0.7
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
